<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shimmer_auto_start="true"
            app:shimmer_duration="1200">

            <include layout="@layout/fragment_skeleton_list" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:context=".ui.view.EventDetailActivity"
            tools:visibility="visible">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentScrim="@color/purple_700"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                    tools:title="@string/app_name">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/parallax_image_height"
                        android:background="@color/purple_700"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax" />

                    <androidx.appcompat.widget.Toolbar
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/medium_margin">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/normal_margin"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="8sp"
                        android:textSize="@dimen/medium_font"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_calendar"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="12/03/2022 14:00" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:drawablePadding="@dimen/normal_margin"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="8sp"
                        android:textSize="@dimen/medium_font"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_price"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date"
                        tools:text="R$ 20,00" />

                    <ImageView
                        android:id="@+id/ic_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_share"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:lineSpacingExtra="8sp"
                        android:textSize="@dimen/big_font"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/price"
                        tools:text="Title" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:lineSpacingExtra="8sp"
                        android:textSize="@dimen/big_font"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title"
                        tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. " />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:drawablePadding="@dimen/normal_margin"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/txt_location"
                        android:textSize="@dimen/medium_font"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_location"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description" />

                    <fragment
                        android:id="@+id/map_fragment"
                        class="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/map_height"
                        android:layout_marginTop="@dimen/normal_margin"
                        app:layout_constraintTop_toBottomOf="@+id/location" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/check_in_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/big_margin"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@+id/map_fragment"
                        tools:visibility="visible">

                        <TextView
                            android:id="@+id/tv_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_check_in"
                            android:textSize="@dimen/big_font"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/img_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/big_margin"
                            android:layout_marginEnd="@dimen/medium_margin"
                            app:layout_constraintEnd_toStartOf="@+id/et_name"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_login"
                            app:srcCompat="@drawable/ic_user" />

                        <EditText
                            android:id="@+id/et_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:hint="@string/txt_name"
                            android:inputType="textEmailAddress"
                            android:maxLength="100"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/img_username"
                            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

                        <ImageView
                            android:id="@+id/img_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="28dp"
                            android:layout_marginEnd="@dimen/medium_margin"
                            app:layout_constraintEnd_toStartOf="@+id/et_email"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/et_name"
                            app:srcCompat="@drawable/ic_email" />

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:hint="@string/txt_email"
                            android:inputType="textEmailAddress"
                            android:maxLength="100"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/img_password"
                            app:layout_constraintTop_toBottomOf="@+id/et_name" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_check_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:background="@color/purple_500"
                        android:text="@string/txt_do_check_in"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toBottomOf="@+id/check_in_content" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>